# flutter_libsparkmobile

./: .gitignore  .gitmodules  LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/com/example/: AbstractNativeList.java  NativeBase.java
android/jni/: ArrayConversionUtils.h  BoxingConversionUtils.cpp  BoxingConversionUtils.h  CppProxyBase.cpp  CppProxyBase.h  FieldAccessMethods.cpp  FieldAccessMethods.h  JniBase.cpp  JniBase.h  JniCallJavaMethod.cpp  JniCallJavaMethod.h  JniCallbackErrorChecking.cpp  JniCallbackErrorChecking.h  JniClassCache.cpp  JniClassCache.h  JniCppConversionUtils.cpp  JniCppConversionUtils.h  JniExceptionThrower.h  JniReference.h  JniTemplateMetainfo.h  JniWrapperCache.cpp  JniWrapperCache.h
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/cypherstack/flutter_libsparkmobile/: FlutterLibsparkmobilePlugin.kt
android/src/test/kotlin/com/cypherstack/flutter_libsparkmobile/: FlutterLibsparkmobilePluginTest.kt
cbridge/include/: GenericCollections.h
cbridge/src/: GenericCollections.cpp  LocaleHandle.cpp  WrapperCache.cpp
cbridge_internal/include/: WrapperCache.h
cpp/include/: DurationHash.h  Hash.h  Locale.h  Return.h  TimePointHash.h  TypeRepository.h  UnorderedMapHash.h  UnorderedSetHash.h  VectorHash.h
cpp/src/: LocaleImpl.cpp  TypeRepositoryImpl.cpp
dart/: pubspec.yaml
dart/ffi/: BlobHandle.cpp  BlobHandle.h  CallbacksHandle.cpp  CallbacksHandle.h  CallbacksQueue.cpp  CallbacksQueue.h  ConversionBase.h  DartDLInit.cpp  DartDLInit.h  Export.h  FinalizerData.cpp  FinalizerData.h  GenericTypesConversion.cpp  GenericTypesConversion.h  InstanceCache.cpp  InstanceCache.h  IsolateContext.cpp  IsolateContext.h  LocaleHandle.cpp  LocaleHandle.h  NullableHandles.cpp  NullableHandles.h  OpaqueHandle.h  ProxyCache.cpp  ProxyCache.h  StringHandle.cpp  StringHandle.h
dart/lib/: library_context.dart
dart/lib/src/: _library_context.dart  _token_cache.dart  _type_repository.dart  builtin_types__conversion.dart  generic_types__conversion.dart
example/: README.md  pubspec.yaml
example/android/app/: build.gradle  build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/cypherstack/flutter_libsparkmobile_example/: MainActivity.kt
example/android/app/src/main/kotlin/com/example/flutter_libsparkmobile_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/ios/: Podfile
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/lib/util/: address_generator.dart
example/lib/views/: address_view.dart  id_coin_view.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_libsparkmobile.podspec  run_build.sh
ios/Classes/: FlutterLibsparkmobilePlugin.swift
lib/: extensions.dart  flutter_libsparkmobile.dart  flutter_libsparkmobile_bindings.dart  flutter_libsparkmobile_bindings_generated.dart  flutter_libsparkmobile_method_channel.dart  flutter_libsparkmobile_platform_interface.dart  sparkmobile_bindings.dart
lib/src/: extensions.dart  flutter_libsparkmobile_bindings_generated.dart  logging.dart
lib/src/models/: spark_coin.dart
linux/: CMakeLists.txt  flutter_libsparkmobile_plugin.cc  flutter_libsparkmobile_plugin_private.h
linux/include/flutter_libsparkmobile/: flutter_libsparkmobile_plugin.h
linux/test/: flutter_libsparkmobile_plugin_test.cc
macos/: flutter_libsparkmobile.podspec  run_build.sh
macos/Classes/: FlutterLibsparkmobilePlugin.swift  flutter_libsparkmobile.c
scripts/: prebuild.bat  prebuild.sh
scripts/android/: build_all.sh
scripts/ios/: build_all.sh
scripts/linux/: build_all.sh  build_openssl.sh  build_sharedfile.sh  copyCMakeLists.sh  copymobile.sh  linkDistros.sh
scripts/linux/CMakeLists/sparkmobile/: Utils.h  dart_interface.cpp  dart_interface.h  template_CMakeLists.txt  utils.cpp  utils.h
scripts/macos/: build_all.sh  build_openssl_common.sh
scripts/windows/: README.md  build_all.sh  build_openssl.sh  build_secp256k1.sh  config.sh  mxedeps.sh  prebuild.bat  prebuild.ps1  prep_sharedfile.sh
scripts/windows/CMakeLists/secp256k1/: template_CMakeLists.txt
scripts/windows/cache/: prep_sharedfile.sh
src/: CMakeLists.txt  flutter_libsparkmobile.c  flutter_libsparkmobile.cpp  flutter_libsparkmobile.h  interface_test.cpp  interface_test.sh  structs.h  transaction.cpp  transaction.h  utils.cpp  utils.h
test/: flutter_libsparkmobile_method_channel_test.dart  flutter_libsparkmobile_test.dart
windows/: CMakeLists.txt  flutter_libsparkmobile_plugin.cpp  flutter_libsparkmobile_plugin.h  flutter_libsparkmobile_plugin_c_api.cpp
windows/include/flutter_libsparkmobile/: flutter_libsparkmobile_plugin_c_api.h
windows/test/: flutter_libsparkmobile_plugin_test.cpp
